fix: overflow text

--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -1,5 +1,6 @@
 body {
 	margin: 0;
+	overflow-x: hidden;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 	/* DO NOT add this: transform: translate3d(0, 0, 0); */
 	font-family: -apple-system, system-ui, Segoe UI, Roboto, Ubuntu, Cantarell,
@@ -12,6 +13,11 @@ body {
  * ************   主体   ************
  * =============================================================================
  */
+
+article {
+	word-wrap: break-word;
+	overflow-wrap: break-word;
+}
 
 @media (min-width: 1000px) {
 	body {
